JumpScript/tests/baselines/reference/commentOnImportStatement2.errors.txt
tests/cases/compiler/commentOnImportStatement2.jump(2,22): error TS2307: Cannot find module './foo'.


==== tests/cases/compiler/commentOnImportStatement2.jump (1 errors) ====
    /* not copyright */
    import foo = require('./foo');
                         ~~~~~~~
!!! error TS2307: Cannot find module './foo'.